logs/job_1395.err
  File "/home/ihubnvidia20/vqe4.py", line 104
    basis="sto3g",
    ^
SyntaxError: invalid syntax
